# statsvy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO.md  cliff.toml  justfile  mkdocs.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: instructions.md
.github/workflows/: block-main-push.yml  ci.yml  enforce-release-commit.yml  release.yml
assets/: languages.yml
docs/: architecture.md  branch-protection.md  changelog.md  cli-reference.md  configuration.md  contributing.md  developer-api.md  index.md  installation.md  quickstart.md  requirements.txt
hooks/: require_release_on_main.py
src/statsvy/: __init__.py  __main__.py  cli_main.py
tests/: conftest.py  test_main_entry_point.py
tests/analyzer/: test_analyzer_io_instrumentation.py  test_analyzer_uses_scan_contents.py  test_basic_metrics.py  test_binary_file_filtering.py  test_comment_and_blank_lines.py  test_duplicate_skipping.py  test_init.py  test_integration.py  test_line_counting_accuracy.py  test_lines_by_category.py  test_lines_by_language.py  test_sequential_use.py
tests/api/: test_public_api.py
tests/cli/: test_can_basic_behaviour.py  test_cli_commands.py  test_compare_options.py  test_get_target_directory.py  test_help_documentation.py  test_multiple_commands_in_sequence.py  test_no_color_behavior.py  test_performance_tracking.py  test_scan_config_parsing.py  test_scan_flags_and_options.py  test_scan_invalid_options.py  test_scan_no_save_behavior.py  test_scan_path_errors.py  test_scan_timeout_flag.py  test_version_flag.py
tests/comparison/: conftest.py  test_compare_formatter.py  test_comparison_analyzer.py
tests/config_loader/: test_config_loader_basics.py  test_config_loader_binary_extensions.py  test_config_loader_bool_conversions.py  test_config_loader_coverage.py  test_config_loader_from_cli.py  test_config_loader_from_env.py  test_config_loader_from_file.py  test_config_loader_key_parsing.py  test_config_loader_priority.py  test_config_loader_update_config.py  test_config_loader_value_conversion.py  test_statsvy_toml_fallback.py
tests/config_readers/: test_cargo_toml_reader.py  test_config_readers_factory.py  test_package_json_reader.py  test_pyproject_reader.py  test_requirements_txt_reader.py
tests/core/: test_git_stats_coverage.py  test_git_stats_extensions.py  test_performance_tracker.py  test_project_config_readers.py  test_project_scanner.py
tests/data/: test_performance_metrics.py  test_project_info.py
tests/formatter/: test_formatter.py
tests/formatters/: conftest.py  test_compare_display_customization.py  test_deps_list_display.py  test_display_customization.py  test_history_formatter.py  test_history_formatter_create_table.py  test_history_formatter_delta_str.py  test_history_formatter_format.py  test_history_formatter_parse_time.py  test_html_formatter.py  test_json_formatter.py  test_markdown_formatter.py  test_summary_formatter.py  test_summary_formatter_coverage.py  test_table_formatter_coverage.py  test_table_formatter_edge_cases.py  test_table_formatter_format_metrics.py  (+2 more)
(+116 files in other folders)
